--- a/templates/base.html
+++ b/templates/base.html
@@ -149,6 +149,7 @@
 <script src="${STATIC_URL}client/controllers/modifySys.js" type="text/javascript"></script>
 <script src="${STATIC_URL}client/controllers/syslog.js" type="text/javascript"></script>
 <script src="${STATIC_URL}client/controllers/sysconfig.js" type="text/javascript"></script>
+<script src="${STATIC_URL}client/controllers/my_test.js" type="text/javascript"></script>
 
 
 
